[package]
name = "visualization"
version = "0.1.0"
edition = "2021"


[lib]
name = "visualization_test"
src = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# AudioInput Library
cpal = "0.14.1"
# Dependeny to send via SACN/E1.31
sacn-unofficial = "0.9.0"
#Clone Library for EffectProcessing and FilterProcessing
dyn-clone = "1.0.9"

#Error Handling
anyhow = "1.0.66"
thiserror = "1.0.37"
#Logging
log = "0.4.17"
env_logger = "0.9.3"
